--- a/vacinacao/src/main/resources/application.properties
+++ b/vacinacao/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configurações do banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dbvacinacao
-spring.datasource.username=root
+spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -9,3 +9,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Configurações do Servidor
 server.servlet.context-path=/api-vacinacao
+
+
+#Make sure less secure App is enabled at link https://myaccount.google.com/lesssecureapps
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = 
+spring.mail.password = 
+
+spring.mail.properties.mail.smtp.starttls.enable=true
