--- a/vacinacao/src/main/resources/application.properties
+++ b/vacinacao/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configurações do banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dbvacinacao
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -15,7 +15,7 @@ server.servlet.context-path=/api-vacinacao
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = 
-spring.mail.password = 
+spring.mail.username = sistemadevacinacao@gmail.com
+spring.mail.password = vaccine2021-DEPS
 
 spring.mail.properties.mail.smtp.starttls.enable=true
